--- a/Index.html
+++ b/Index.html
@@ -7,12 +7,11 @@
     <title>A Frame - Rede Manchete</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
+    <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 </head>
 
 <body>
-    <a-scene embedded arjs='sourceType: webcam;'>
+    <a-scene embedded arjs>
     <a-entity 
     obj-model="obj: url(Manchete.obj); mtl: url(Manchete.mtl)"
         position="0 0 -5"; 
@@ -24,8 +23,7 @@
         easing="linear"
       repeat="indefinite"></a-animation>
     </a-entity>
-        <a-marker-camera preset='hiro'></a-marker-camera>
-        <a-sky color="#ECECEC"></a-sky>
+                <a-marker-camera preset='hiro'></a-marker-camera>
     </a-scene>
 </body>
 
