--- a/Index.html
+++ b/Index.html
@@ -7,15 +7,16 @@
     <title>A Frame - Rede Manchete</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+    <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
 </head>
 
 <body>
-    <a-scene embedded arjs>
+    <a-scene embedded arjs='sourceType: webcam;'>
     <a-entity 
     obj-model="obj: url(Manchete.obj); mtl: url(Manchete.mtl)"
         position="0 0 -5"; 
-        scale="0.4 0.4 0.4";>
+        scale="0.2 0.2 0.2";>
         <a-animation
         attribute="rotation" 
         to="0 360 0"
