--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <a-scene embedded arjs='sourceType: webcam;'>
+    <a-scene embedded arjs="sourceType: webcam;">
     <a-entity 
     obj-model="obj: url(Manchete.obj); mtl: url(Manchete.mtl)"
         position="0 0 -5"; 
