--- a/Index.html
+++ b/Index.html
@@ -11,19 +11,18 @@
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
 <body>
-	<a-scene embedded arjs='sourceType: webcam;'>
-		<a-entity 
-    obj-model="obj: url(Manchete.obj); mtl: url(Manchete.mtl)"
-        position="0 0 -15"; 
-        scale="0.2 0.2 0.2";>
-        <a-animation
-        attribute="rotation" 
-        to="0 360 0"
-        dur="3000"
-        easing="linear"
-      repeat="indefinite"></a-animation>
-    </a-entity>
-		<a-marker-camera preset='hiro'></a-marker-camera>
-	</a-scene>
+<a-scene embedded arjs='sourceType: webcam;'>
+	<a-entity collada-model="url(Manchete.dae)"
+        	  position="0 0 -15"; 
+        	  scale="0.7 0.7 0.7";>
+        	<a-animation
+        	   attribute="rotation" 
+        	   to="0 360 0"
+        	   dur="3000"
+        	   easing="linear"
+      		   repeat="indefinite"></a-animation>
+    	</a-entity>
+	<a-marker-camera preset='hiro'></a-marker-camera>
+</a-scene>
 </body>
 </html>
